--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -7,8 +7,8 @@ PH0-OSC_IN.Signal=RCC_OSC_IN
 PC10.GPIO_PuPd=GPIO_NOPULL
 PE11.GPIOParameters=GPIO_PuPd
 SPI1.VirtualType=VM_MASTER
-PB10.GPIO_PuPd=GPIO_NOPULL
 SPI2.VirtualType=VM_MASTER
+PB10.Mode=I2C
 PC12.Locked=true
 PA10.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLCLKFreq_Value=168000000
@@ -51,6 +51,7 @@ PD8.Signal=GPIO_Output
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE5.Signal=GPIO_Output
 PE1.Signal=GPXTI1
+PE14.Locked=true
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
@@ -102,7 +103,6 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 USB_OTG_FS.IPParameters=phy_itface,VirtualMode
-PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB13.Mode=Full_Duplex_Master
 PE6.Locked=true
 PC12.GPIO_PuPd=GPIO_NOPULL
@@ -121,7 +121,7 @@ PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=64
+Mcu.PinsNb=65
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC11.Locked=true
@@ -129,7 +129,6 @@ PC13-ANTI_TAMP.GPIO_Label=T_IRQ
 PA9.GPIO_Label=VBUS_FS
 PC6.Signal=GPIO_Output
 PC2.Signal=SPI2_MISO
-PB11.GPIO_Label=KEYBOARD_COLUMN_3
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 SH.GPXTI0.ConfNb=1
 PA11.GPIO_Label=OTG_FS_DM
@@ -139,11 +138,12 @@ PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC11.GPIOParameters=GPIO_Label
-Mcu.Pin62=VP_TIM3_VS_no_output1
-Mcu.Pin63=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin60=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM3_VS_no_output1
+Mcu.Pin60=VP_SYS_VS_Systick
+Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+Mcu.Pin64=VP_USB_HOST_VS_USB_HOST_CDC_FS
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
 PA0-WKUP.Signal=GPXTI0
 USB_HOST0.BSP.semaphore=
@@ -153,39 +153,38 @@ PD10.Signal=GPIO_Output
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=T_CS
 PA11.Locked=true
-PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin59=VP_SYS_VS_Systick
-Mcu.Pin57=PE1
-Mcu.Pin58=VP_RNG_VS_RNG
+Mcu.Pin59=VP_RNG_VS_RNG
+Mcu.Pin57=PE0
+Mcu.Pin58=PE1
+PB11.Mode=I2C
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-Mcu.Pin51=PB3
-Mcu.Pin52=PB6
-Mcu.Pin50=PD5
-Mcu.Pin55=PB9
-Mcu.Pin56=PE0
-Mcu.Pin53=PB7
-Mcu.Pin54=PB8
+Mcu.Pin51=PD5
+Mcu.Pin52=PB3
+Mcu.Pin50=PD4
+Mcu.Pin55=PB8
+Mcu.Pin56=PB9
+Mcu.Pin53=PB6
+Mcu.Pin54=PB7
 PC6.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
-PB11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=PC12
-Mcu.Pin49=PD4
-Mcu.Pin46=PC10
-Mcu.Pin47=PC11
-PB10.Signal=I2S2_CK
+Mcu.Pin48=PC11
+Mcu.Pin49=PC12
+Mcu.Pin46=PA14
+Mcu.Pin47=PC10
+PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PA9
-Mcu.Pin41=PA10
-Mcu.Pin44=PA13
+Mcu.Pin40=PA8
+Mcu.Pin41=PA9
+Mcu.Pin44=PA12
 PC12.Mode=Half_Duplex_Master
-Mcu.Pin45=PA14
-Mcu.Pin42=PA11
-Mcu.Pin43=PA12
+Mcu.Pin45=PA13
+Mcu.Pin42=PA10
+Mcu.Pin43=PA11
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
@@ -193,22 +192,23 @@ USB_HOST.VirtualModeFS=Cdc
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
+PE14.Signal=GPIO_Input
 PE15.Signal=GPIO_Input
-Mcu.Pin37=PC7
-Mcu.Pin38=PC9
-Mcu.Pin35=PD15
-Mcu.Pin36=PC6
+Mcu.Pin37=PC6
+Mcu.Pin38=PC7
+Mcu.Pin35=PD14
+Mcu.Pin36=PD15
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PA8
-Mcu.Pin30=PD10
+Mcu.Pin39=PC9
+Mcu.Pin30=PD9
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PD13
+Mcu.Pin33=PD12
 TIM3.IPParameters=Prescaler,AutoReloadPreload,Period,Channel-PWM Generation1 No Output
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PD14
-Mcu.Pin31=PD11
-Mcu.Pin32=PD12
+Mcu.Pin34=PD13
+Mcu.Pin31=PD10
+Mcu.Pin32=PD11
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -216,22 +216,22 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PB14
-Mcu.Pin27=PB15
+Mcu.Pin26=PB13
+Mcu.Pin27=PB14
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PB12
+Mcu.Pin24=PB11
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PB13
-Mcu.Pin28=PD8
+Mcu.Pin25=PB12
+Mcu.Pin28=PB15
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PD9
+Mcu.Pin29=PD8
 PA4.Signal=I2S3_WS
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-Mcu.Pin22=PB10
+Mcu.Pin22=PE15
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PB11
+Mcu.Pin23=PB10
 Mcu.Pin20=PE11
-Mcu.Pin21=PE15
+Mcu.Pin21=PE14
 PD10.Locked=true
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
 PA10.Locked=true
@@ -281,14 +281,13 @@ PA6.Mode=Full_Duplex_Master
 RCC.CortexFreq_Value=168000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F407VGTx
-PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD9.GPIOParameters=PinState,GPIO_Label
 PC10.Locked=true
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_I2C2_Init-I2C2-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -298,23 +297,22 @@ PA11.Mode=Host_Only
 PH0-OSC_IN.GPIOParameters=GPIO_Label
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.GPIO_PuPd=GPIO_NOPULL
-PB11.GPIO_PuPd=GPIO_PULLUP
-PB11.Signal=GPIO_Input
+PB11.Signal=I2C2_SDA
 PB15.Signal=SPI2_MOSI
 PD11.PinState=GPIO_PIN_RESET
 PE5.GPIOParameters=GPIO_Speed,GPIO_Label
 ProjectManager.StackSize=0x400
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 PD13.Signal=GPIO_Output
-Mcu.IP4=RNG
+Mcu.IP4=RCC
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=SPI1
+Mcu.IP5=RNG
 PD13.Locked=true
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP0=I2C3
+Mcu.IP2=I2S3
+Mcu.IP3=NVIC
+Mcu.IP0=I2C2
 PA12.Locked=true
-Mcu.IP1=I2S3
+Mcu.IP1=I2C3
 PA12.Signal=USB_OTG_FS_DP
 PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
@@ -322,7 +320,7 @@ PE11.GPIO_PuPd=GPIO_PULLUP
 Mcu.ThirdPartyNb=0
 PD11.GPIO_Label=KEYBOARD_ROW_1
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=13
+Mcu.IPNb=14
 RCC.I2SClocksFreq_Value=96000000
 ProjectManager.PreviousToolchain=
 TIM3.Period=10000
@@ -350,12 +348,13 @@ Mcu.Pin5=PC13-ANTI_TAMP
 RCC.HSE_VALUE=8000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA4.GPIO_PuPd=GPIO_NOPULL
-Mcu.IP10=TIM3
+Mcu.IP10=TIM2
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Mcu.IP12=USB_OTG_FS
-Mcu.IP11=USB_HOST
+Mcu.IP12=USB_HOST
+Mcu.IP11=TIM3
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.GPIO_PuPd=GPIO_NOPULL
+Mcu.IP13=USB_OTG_FS
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=1000000
 PA14.Mode=Serial_Wire
@@ -415,6 +414,7 @@ PD12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.GPIO_Label=LD6 [Blue Led]
 PB8.GPIOParameters=GPIO_Speed,GPIO_Label
 PA7.Mode=Full_Duplex_Master
+PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.GPIO_Label=Audio_SDA [CS43L22_SDA]
 PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
 ProjectManager.NoMain=false
@@ -424,6 +424,7 @@ USB_HOST0.BSP.solution=PC0
 PC10.Mode=Half_Duplex_Master
 USB_HOST.BSP.number=1
 ProjectManager.DefaultFWLocation=true
+PE14.GPIO_Label=KEYBOARD_COLUMN_3
 PC2.Mode=Full_Duplex_Master
 PD9.Signal=GPIO_Output
 PD5.Signal=GPIO_Input
@@ -431,7 +432,6 @@ PB12.Locked=true
 ProjectManager.DeletePrevious=true
 PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
 VP_RNG_VS_RNG.Mode=RNG_Activate
-PB10.Locked=true
 boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Label=OTG_FS_DP
@@ -453,7 +453,6 @@ SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 PE15.GPIO_Label=encoder_button
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 ProjectManager.TargetToolchain=STM32CubeIDE
-PB10.GPIO_Label=CLK_IN [MP45DT02_CLK]
 PB7.GPIOParameters=GPIO_Speed,GPIO_Label
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 PB2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -494,6 +493,7 @@ PD13.GPIO_PuPd=GPIO_NOPULL
 PD5.GPIO_PuPd=GPIO_NOPULL
 PD14.GPIO_Label=LD5 [Red Led]
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PE14.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE6.Signal=GPIO_Output
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
@@ -502,11 +502,11 @@ Mcu.Name=STM32F407V(E-G)Tx
 PE0.Signal=GPIO_Input
 PA13.GPIO_Label=SWDIO
 PB2.Locked=true
-Mcu.IP8=TIM1
-Mcu.IP9=TIM2
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
 PD14.Signal=GPIO_Output
-Mcu.IP6=SPI2
-Mcu.IP7=SYS
+Mcu.IP6=SPI1
+Mcu.IP7=SPI2
 ProjectManager.CoupleFile=false
 RCC.48MHZClocksFreq_Value=48000000
 PB3.Signal=SYS_JTDO-SWO
@@ -542,7 +542,6 @@ PA5.GPIO_Mode=GPIO_MODE_AF_PP
 PD8.PinState=GPIO_PIN_RESET
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PB11.Locked=true
 ProjectManager.DeviceId=STM32F407VGTx
 PB12.Signal=GPIO_Input
 ProjectManager.LibraryCopy=1
