--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -23,6 +23,7 @@ USB_HOST0.BSP.condition=
 PC6.GPIO_Label=CS_mcroSD
 PC3.Locked=true
 RCC.RTCFreq_Value=32000
+PE10.GPIO_PuPd=GPIO_PULLUP
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
 PD4.Locked=true
 SH.S_TIM1_CH1.ConfNb=1
@@ -50,6 +51,7 @@ PC3.Signal=I2S2_SD
 PD8.Signal=GPIO_Output
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE5.Signal=GPIO_Output
+PE10.Locked=true
 PE1.Signal=GPXTI1
 PE14.Locked=true
 ProjectManager.ProjectBuild=false
@@ -80,6 +82,7 @@ PD14.GPIO_PuPd=GPIO_NOPULL
 PE1.Locked=true
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PE10.Signal=GPIO_Input
 ProjectManager.HalAssertFull=false
 PB2.GPIO_PuPd=GPIO_NOPULL
 SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
@@ -91,6 +94,7 @@ PB14.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 SPI2.Mode=SPI_MODE_MASTER
 PD11.Locked=true
+PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD12.Signal=GPIO_Output
 PA14.Locked=true
 PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -109,6 +113,7 @@ PC12.GPIO_PuPd=GPIO_NOPULL
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.GPIO_PuPd=GPIO_NOPULL
+PE10.GPIO_Label=MOTION_SENSOR_9960
 PD5.Locked=true
 PE6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.GPIO_Label=I2S3_WS [CS43L22_LRCK]
@@ -121,7 +126,7 @@ PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=65
+Mcu.PinsNb=66
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC11.Locked=true
@@ -133,18 +138,19 @@ PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 SH.GPXTI0.ConfNb=1
 PA11.GPIO_Label=OTG_FS_DM
 PE1.GPIO_PuPd=GPIO_NOPULL
-PB14.Locked=true
 PC0.Signal=GPIO_Output
+PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC11.GPIOParameters=GPIO_Label
-Mcu.Pin62=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM3_VS_no_output1
-Mcu.Pin60=VP_SYS_VS_Systick
-Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin60=VP_RNG_VS_RNG
+Mcu.Pin61=VP_SYS_VS_Systick
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-Mcu.Pin64=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin64=VP_TIM3_VS_no_output1
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
+Mcu.Pin65=VP_USB_HOST_VS_USB_HOST_CDC_FS
 PA0-WKUP.Signal=GPXTI0
 USB_HOST0.BSP.semaphore=
 PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -154,37 +160,37 @@ PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin59=VP_RNG_VS_RNG
-Mcu.Pin57=PE0
-Mcu.Pin58=PE1
+Mcu.Pin59=PE1
+Mcu.Pin57=PB9
+Mcu.Pin58=PE0
 PB11.Mode=I2C
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-Mcu.Pin51=PD5
-Mcu.Pin52=PB3
-Mcu.Pin50=PD4
-Mcu.Pin55=PB8
-Mcu.Pin56=PB9
-Mcu.Pin53=PB6
-Mcu.Pin54=PB7
+Mcu.Pin51=PD4
+Mcu.Pin52=PD5
+Mcu.Pin50=PC12
+Mcu.Pin55=PB7
+Mcu.Pin56=PB8
+Mcu.Pin53=PB3
+Mcu.Pin54=PB6
 PC6.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=PC11
-Mcu.Pin49=PC12
-Mcu.Pin46=PA14
-Mcu.Pin47=PC10
+Mcu.Pin48=PC10
+Mcu.Pin49=PC11
+Mcu.Pin46=PA13
+Mcu.Pin47=PA14
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PA8
-Mcu.Pin41=PA9
-Mcu.Pin44=PA12
+Mcu.Pin40=PC9
+Mcu.Pin41=PA8
+Mcu.Pin44=PA11
 PC12.Mode=Half_Duplex_Master
-Mcu.Pin45=PA13
-Mcu.Pin42=PA10
-Mcu.Pin43=PA11
+Mcu.Pin45=PA12
+Mcu.Pin42=PA9
+Mcu.Pin43=PA10
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
@@ -194,21 +200,21 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
 PE14.Signal=GPIO_Input
 PE15.Signal=GPIO_Input
-Mcu.Pin37=PC6
-Mcu.Pin38=PC7
-Mcu.Pin35=PD14
-Mcu.Pin36=PD15
+Mcu.Pin37=PD15
+Mcu.Pin38=PC6
+Mcu.Pin35=PD13
+Mcu.Pin36=PD14
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PC9
-Mcu.Pin30=PD9
+Mcu.Pin39=PC7
+Mcu.Pin30=PD8
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PD12
+Mcu.Pin33=PD11
 TIM3.IPParameters=Prescaler,AutoReloadPreload,Period,Channel-PWM Generation1 No Output
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PD13
-Mcu.Pin31=PD10
-Mcu.Pin32=PD11
+Mcu.Pin34=PD12
+Mcu.Pin31=PD9
+Mcu.Pin32=PD10
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -216,22 +222,22 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PB13
-Mcu.Pin27=PB14
+Mcu.Pin26=PB12
+Mcu.Pin27=PB13
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PB11
+Mcu.Pin24=PB10
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PB12
-Mcu.Pin28=PB15
+Mcu.Pin25=PB11
+Mcu.Pin28=PB14
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PD8
+Mcu.Pin29=PB15
 PA4.Signal=I2S3_WS
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-Mcu.Pin22=PE15
+Mcu.Pin22=PE14
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PB10
-Mcu.Pin20=PE11
-Mcu.Pin21=PE14
+Mcu.Pin23=PE15
+Mcu.Pin20=PE10
+Mcu.Pin21=PE11
 PD10.Locked=true
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
 PA10.Locked=true
