--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -53,6 +53,7 @@ VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 PE5.Signal=GPIO_Output
 PE10.Locked=true
 PE1.Signal=GPXTI1
+PC1.PinState=GPIO_PIN_SET
 PE14.Locked=true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.ProjectBuild=false
@@ -61,6 +62,7 @@ USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
 PB2.Signal=GPIO_Input
 PA4.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Input
+PC1.GPIO_PuPd=GPIO_PULLUP
 PB12.GPIO_Label=KEYBOARD_COLUMN_2
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 MxDb.Version=DB.6.0.21
@@ -128,7 +130,7 @@ SH.GPXTI10.0=GPIO_EXTI10
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=66
+Mcu.PinsNb=67
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC11.Locked=true
@@ -145,14 +147,15 @@ PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC11.GPIOParameters=GPIO_Label
-Mcu.Pin62=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin63=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin60=VP_RNG_VS_RNG
-Mcu.Pin61=VP_SYS_VS_Systick
+Mcu.Pin62=VP_SYS_VS_Systick
+Mcu.Pin63=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin60=PE1
+Mcu.Pin61=VP_RNG_VS_RNG
 PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-Mcu.Pin64=VP_TIM3_VS_no_output1
+Mcu.Pin66=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin64=VP_TIM3_VS_ClockSourceINT
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
-Mcu.Pin65=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin65=VP_TIM3_VS_no_output1
 PA0-WKUP.Signal=GPXTI0
 USB_HOST0.BSP.semaphore=
 PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -162,37 +165,37 @@ PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin59=PE1
-Mcu.Pin57=PB9
-Mcu.Pin58=PE0
+Mcu.Pin59=PE0
+Mcu.Pin57=PB8
+Mcu.Pin58=PB9
 PB11.Mode=I2C
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-Mcu.Pin51=PD4
-Mcu.Pin52=PD5
-Mcu.Pin50=PC12
-Mcu.Pin55=PB7
-Mcu.Pin56=PB8
-Mcu.Pin53=PB3
-Mcu.Pin54=PB6
+Mcu.Pin51=PC12
+Mcu.Pin52=PD4
+Mcu.Pin50=PC11
+Mcu.Pin55=PB6
+Mcu.Pin56=PB7
+Mcu.Pin53=PD5
+Mcu.Pin54=PB3
 PC6.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
 PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=PC10
-Mcu.Pin49=PC11
-Mcu.Pin46=PA13
-Mcu.Pin47=PA14
+Mcu.Pin48=PA14
+Mcu.Pin49=PC10
+Mcu.Pin46=PA12
+Mcu.Pin47=PA13
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PC9
-Mcu.Pin41=PA8
-Mcu.Pin44=PA11
+Mcu.Pin40=PC7
+Mcu.Pin41=PC9
+Mcu.Pin44=PA10
 PC12.Mode=Half_Duplex_Master
-Mcu.Pin45=PA12
-Mcu.Pin42=PA9
-Mcu.Pin43=PA10
+Mcu.Pin45=PA11
+Mcu.Pin42=PA8
+Mcu.Pin43=PA9
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
@@ -202,21 +205,22 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
 PE14.Signal=GPIO_Input
 PE15.Signal=GPIO_Input
-Mcu.Pin37=PD15
-Mcu.Pin38=PC6
-Mcu.Pin35=PD13
-Mcu.Pin36=PD14
+Mcu.Pin37=PD14
+Mcu.Pin38=PD15
+Mcu.Pin35=PD12
+Mcu.Pin36=PD13
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PC7
-Mcu.Pin30=PD8
+Mcu.Pin39=PC6
+Mcu.Pin30=PB15
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PD11
+Mcu.Pin33=PD10
 TIM3.IPParameters=Prescaler,AutoReloadPreload,Period,Channel-PWM Generation1 No Output
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PD12
-Mcu.Pin31=PD9
-Mcu.Pin32=PD10
+Mcu.Pin34=PD11
+Mcu.Pin31=PD8
+Mcu.Pin32=PD9
+PC1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -224,22 +228,22 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PB12
-Mcu.Pin27=PB13
+Mcu.Pin26=PB11
+Mcu.Pin27=PB12
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PB10
+Mcu.Pin24=PE15
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PB11
-Mcu.Pin28=PB14
+Mcu.Pin25=PB10
+Mcu.Pin28=PB13
 PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PB15
+Mcu.Pin29=PB14
 PA4.Signal=I2S3_WS
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-Mcu.Pin22=PE14
+Mcu.Pin22=PE11
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PE15
-Mcu.Pin20=PE10
-Mcu.Pin21=PE11
+Mcu.Pin23=PE14
+Mcu.Pin20=PE9
+Mcu.Pin21=PE10
 PD10.Locked=true
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
 PA10.Locked=true
@@ -254,18 +258,18 @@ ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=USB_OTG_FS_DM
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA5
+Mcu.Pin15=PA4
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PA6
-Mcu.Pin13=PA0-WKUP
-Mcu.Pin14=PA4
-Mcu.Pin19=PE9
+Mcu.Pin16=PA5
+Mcu.Pin13=PC3
+Mcu.Pin14=PA0-WKUP
+Mcu.Pin19=PB2
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA7
-Mcu.Pin18=PB2
+Mcu.Pin17=PA6
+Mcu.Pin18=PA7
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-Mcu.Pin11=PC2
-Mcu.Pin12=PC3
+Mcu.Pin11=PC1
+Mcu.Pin12=PC2
 Mcu.Pin10=PC0
 SH.GPXTI10.ConfNb=1
 PE3.Signal=GPIO_Output
@@ -281,6 +285,7 @@ SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
 USB_HOST0.BSP.mode=Output
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC0.Locked=true
+PC1.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 Mcu.Family=STM32F4
 SH.GPXTI1.0=GPIO_EXTI1
@@ -306,6 +311,7 @@ PA11.Mode=Host_Only
 PH0-OSC_IN.GPIOParameters=GPIO_Label
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.GPIO_PuPd=GPIO_NOPULL
+PC1.Locked=true
 PB11.Signal=I2C2_SDA
 PB15.Signal=SPI2_MOSI
 PD11.PinState=GPIO_PIN_RESET
@@ -325,6 +331,7 @@ Mcu.IP1=I2C3
 PA12.Signal=USB_OTG_FS_DP
 PE4.GPIOParameters=GPIO_Speed,GPIO_Label
 Mcu.UserConstants=
+PC1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PE11.GPIO_PuPd=GPIO_PULLUP
 Mcu.ThirdPartyNb=0
 PD11.GPIO_Label=KEYBOARD_ROW_1
@@ -494,6 +501,7 @@ MxCube.Version=6.2.1
 SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
+PC1.GPIO_Label=AM2302
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
