--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -2,7 +2,6 @@
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PH0-OSC_IN.Locked=true
 PD12.GPIO_Label=LD4 [Green Led]
-PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PC10.GPIO_PuPd=GPIO_NOPULL
 PE11.GPIOParameters=GPIO_PuPd
@@ -10,14 +9,12 @@ SPI1.VirtualType=VM_MASTER
 SPI2.VirtualType=VM_MASTER
 PB10.Mode=I2C
 PC12.Locked=true
-PA10.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLCLKFreq_Value=168000000
 PC12.Signal=I2S3_SD
 PB14.GPIO_Label=KEYBOARD_COLUMN_1
 PA14.GPIO_Label=SWCLK
 RCC.PLLQCLKFreq_Value=48000000
-PC7.Locked=true
-I2S3.IPParameters=AudioFreq-Half_Duplex_Master,ErrorAudioFreq-Half_Duplex_Master,RealAudioFreq-Half_Duplex_Master,RealAudioFreq,ErrorAudioFreq,Instance,VirtualMode,FullDuplexMode
+I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
 PD8.Locked=true
 USB_HOST0.BSP.condition=
 PC6.GPIO_Label=CS_mcroSD
@@ -37,14 +34,12 @@ PA6.GPIO_Mode=GPIO_MODE_AF_PP
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PD14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PA4.Mode=Half_Duplex_Master
+PA4.Mode=Full_Duplex_Master
 SPI1.Direction=SPI_DIRECTION_2LINES
-I2S3.AudioFreq-Half_Duplex_Master=I2S_AUDIOFREQ_96K
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,ClockDivision
 PD4.Signal=GPIO_Output
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=GPIO_Output
-PC7.Signal=I2S3_MCK
 USB_HOST0.BSP.component=
 SPI1.CalculateBaudRate=42.0 MBits/s
 PC3.Signal=I2S2_SD
@@ -65,12 +60,11 @@ PB12.GPIO_Label=KEYBOARD_COLUMN_2
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 MxDb.Version=DB.6.0.21
 PE15.Locked=true
-I2S3.ErrorAudioFreq=-2.34 %
+I2S3.ErrorAudioFreq=0.0 %
 PE0.GPIOParameters=GPIO_PuPd,GPIO_Label
 ProjectManager.BackupPrevious=false
 PE9.Signal=S_TIM1_CH1
 PA5.GPIO_PuPd=GPIO_NOPULL
-I2S3.ErrorAudioFreq-Half_Duplex_Master=0.8 %
 NVIC.TIM2_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true
 PE4.GPIO_Label=CS_LCD
 PC9.Mode=I2C
@@ -100,14 +94,13 @@ PD12.Signal=GPIO_Output
 PA14.Locked=true
 PD5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PA10.Signal=USB_OTG_FS_ID
 PB9.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB1TimFreq_Value=84000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-USB_OTG_FS.IPParameters=phy_itface,VirtualMode
+USB_OTG_FS.IPParameters=VirtualMode,phy_itface
 PB13.Mode=Full_Duplex_Master
 PE6.Locked=true
 PC12.GPIO_PuPd=GPIO_NOPULL
@@ -125,10 +118,10 @@ NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA5.Mode=Full_Duplex_Master
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 SH.GPXTI10.0=GPIO_EXTI10
-I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
 ProjectManager.ProjectFileName=STM32F407.ioc
 PD9.GPIO_Label=KEYBOARD_ROW_3
-Mcu.PinsNb=67
+Mcu.PinsNb=65
 PD9.PinState=GPIO_PIN_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC11.Locked=true
@@ -137,24 +130,18 @@ PA9.GPIO_Label=VBUS_FS
 PC6.Signal=GPIO_Output
 PC2.Signal=SPI2_MISO
 PD13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-SH.GPXTI0.ConfNb=1
 PA11.GPIO_Label=OTG_FS_DM
 PE1.GPIO_PuPd=GPIO_NOPULL
-PC0.Signal=GPIO_Output
 PB14.Locked=true
+PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC11.GPIOParameters=GPIO_Label
-Mcu.Pin62=VP_SYS_VS_Systick
-Mcu.Pin63=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin60=PE1
-Mcu.Pin61=VP_RNG_VS_RNG
-PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-Mcu.Pin66=VP_USB_HOST_VS_USB_HOST_CDC_FS
-Mcu.Pin64=VP_TIM3_VS_ClockSourceINT
-PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
-Mcu.Pin65=VP_TIM3_VS_no_output1
-PA0-WKUP.Signal=GPXTI0
+Mcu.Pin62=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin63=VP_TIM3_VS_no_output1
+Mcu.Pin60=VP_SYS_VS_Systick
+Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin64=VP_USB_HOST_VS_USB_HOST_CDC_FS
 USB_HOST0.BSP.semaphore=
 PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 USB_HOST0.BSP.STBoard=false
@@ -163,37 +150,36 @@ PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=T_CS
 PA11.Locked=true
 PC15-OSC32_OUT.Locked=true
-Mcu.Pin59=PE0
-Mcu.Pin57=PB8
-Mcu.Pin58=PB9
+Mcu.Pin59=VP_RNG_VS_RNG
+Mcu.Pin57=PE0
+Mcu.Pin58=PE1
 PB11.Mode=I2C
 VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
-Mcu.Pin51=PC12
-Mcu.Pin52=PD4
-Mcu.Pin50=PC11
-Mcu.Pin55=PB6
-Mcu.Pin56=PB7
-Mcu.Pin53=PD5
-Mcu.Pin54=PB3
+Mcu.Pin51=PB3
+Mcu.Pin52=PB4
+Mcu.Pin50=PD5
+Mcu.Pin55=PB8
+Mcu.Pin56=PB9
+Mcu.Pin53=PB6
+Mcu.Pin54=PB7
 PC6.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
 PB9.Locked=true
 I2S3.VirtualMode=I2S_MODE_MASTER
-PC7.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin48=PA14
-Mcu.Pin49=PC10
-Mcu.Pin46=PA12
-Mcu.Pin47=PA13
+Mcu.Pin48=PC12
+Mcu.Pin49=PD4
+Mcu.Pin46=PC10
+Mcu.Pin47=PC11
 PB10.Signal=I2C2_SCL
 PB14.Signal=GPIO_Input
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=PC7
-Mcu.Pin41=PC9
-Mcu.Pin44=PA10
-PC12.Mode=Half_Duplex_Master
-Mcu.Pin45=PA11
-Mcu.Pin42=PA8
-Mcu.Pin43=PA9
+Mcu.Pin40=PA8
+Mcu.Pin41=PA9
+Mcu.Pin44=PA13
+PC12.Mode=Full_Duplex_Master
+Mcu.Pin45=PA14
+Mcu.Pin42=PA11
+Mcu.Pin43=PA12
 VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
 PE1.GPIO_Label=MEMS_INT2 [LIS302DL_INT2]
 ProjectManager.LastFirmware=true
@@ -203,21 +189,21 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PB2.GPIO_Mode=GPIO_MODE_INPUT
 PE14.Signal=GPIO_Input
 PE15.Signal=GPIO_Input
-Mcu.Pin37=PD14
-Mcu.Pin38=PD15
-Mcu.Pin35=PD12
-Mcu.Pin36=PD13
+Mcu.Pin37=PD15
+Mcu.Pin38=PC6
+Mcu.Pin35=PD13
+Mcu.Pin36=PD14
 SPI1.Mode=SPI_MODE_MASTER
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-Mcu.Pin39=PC6
-Mcu.Pin30=PB15
+Mcu.Pin39=PC9
+Mcu.Pin30=PD8
 RCC.EthernetFreq_Value=168000000
-Mcu.Pin33=PD10
+Mcu.Pin33=PD11
 TIM3.IPParameters=Prescaler,AutoReloadPreload,Period,Channel-PWM Generation1 No Output
 PE3.GPIO_PuPd=GPIO_NOPULL
-Mcu.Pin34=PD11
-Mcu.Pin31=PD8
-Mcu.Pin32=PD9
+Mcu.Pin34=PD12
+Mcu.Pin31=PD9
+Mcu.Pin32=PD10
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -225,25 +211,23 @@ PH1-OSC_OUT.GPIO_Label=PH1-OSC_OUT
 TIM2.Period=2000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-Mcu.Pin26=PB11
-Mcu.Pin27=PB12
+Mcu.Pin26=PB12
+Mcu.Pin27=PB13
 RCC.RTCHSEDivFreq_Value=4000000
-Mcu.Pin24=PE15
+Mcu.Pin24=PB10
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PB10
-Mcu.Pin28=PB13
-PC7.GPIO_Label=I2S3_MCK [CS43L22_MCLK]
-Mcu.Pin29=PB14
+Mcu.Pin25=PB11
+Mcu.Pin28=PB14
+Mcu.Pin29=PB15
 PA4.Signal=I2S3_WS
 PD14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-Mcu.Pin22=PE11
+Mcu.Pin22=PE14
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
-Mcu.Pin23=PE14
-Mcu.Pin20=PE9
-Mcu.Pin21=PE10
+Mcu.Pin23=PE15
+Mcu.Pin20=PE10
+Mcu.Pin21=PE11
 PD10.Locked=true
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
-PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 PE3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD11.Signal=GPIO_Output
@@ -255,15 +239,15 @@ ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=USB_OTG_FS_DM
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA4
+Mcu.Pin15=PA5
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-Mcu.Pin16=PA5
+Mcu.Pin16=PA6
 Mcu.Pin13=PC3
-Mcu.Pin14=PA0-WKUP
-Mcu.Pin19=PB2
+Mcu.Pin14=PA4
+Mcu.Pin19=PE9
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA6
-Mcu.Pin18=PA7
+Mcu.Pin17=PA7
+Mcu.Pin18=PB2
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 Mcu.Pin11=PC1
 Mcu.Pin12=PC2
@@ -273,7 +257,6 @@ PE3.Signal=GPIO_Output
 PE2.Locked=true
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 PC3.GPIO_Label=PDM_OUT [MP45DT02_DOUT]
-PA0-WKUP.GPIO_PuPd=GPIO_NOPULL
 PA8.Mode=I2C
 I2S3.Instance=SPI$Index
 SH.GPXTI1.ConfNb=1
@@ -298,7 +281,7 @@ PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2S3_Init-I2S3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_HOST_Init-USB_HOST-false-HAL-false,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_RNG_Init-RNG-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_HOST_Init-USB_HOST-false-HAL-false,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RNG_Init-RNG-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -347,15 +330,14 @@ Mcu.Pin9=PH1-OSC_OUT
 USB_HOST0.BSP.ip=GPIO
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
-Mcu.Pin0=PE2
 PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
+Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PE4
 PA9.GPIO_Mode=GPIO_MODE_INPUT
 Mcu.Pin3=PE5
 Mcu.Pin4=PE6
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PD10.GPIOParameters=PinState,GPIO_Label
 Mcu.Pin5=PC13-ANTI_TAMP
 RCC.HSE_VALUE=8000000
@@ -367,6 +349,7 @@ Mcu.IP12=USB_HOST
 Mcu.IP11=TIM3
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.GPIO_PuPd=GPIO_NOPULL
+PB4.Mode=Full_Duplex_Master
 Mcu.IP13=USB_OTG_FS
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.VCOInputFreq_Value=1000000
@@ -375,8 +358,6 @@ PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 TIM3.Prescaler=2099
 PC11.GPIO_Label=CS_M25Q
 File.Version=6
-PA10.GPIO_Label=OTG_FS_ID
-PC7.GPIO_Mode=GPIO_MODE_AF_PP
 PE3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PB3.GPIOParameters=GPIO_Label
 PE3.Locked=true
@@ -401,10 +382,8 @@ ProjectManager.ToolChainLocation=
 PD14.Locked=true
 PD15.GPIO_PuPd=GPIO_NOPULL
 RCC.LSI_VALUE=32000
-SH.GPXTI0.0=GPIO_EXTI0
 USB_OTG_FS.VirtualMode=Host_Only
 PE0.GPIO_Label=T_MISO
-PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 USB_HOST0.BSP.name=Drive_VBUS_FS
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -417,6 +396,7 @@ VP_TIM3_VS_ClockSourceINT.Mode=Internal
 PC14-OSC32_IN.Locked=true
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB3.Locked=true
+PB4.Signal=I2S3_ext_SD
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3.GPIO_Label=SWO
@@ -434,11 +414,11 @@ ProjectManager.NoMain=false
 SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction,BaudRatePrescaler,CalculateBaudRate
 PC11.Signal=GPIO_Output
 USB_HOST0.BSP.solution=PC0
-PC10.Mode=Half_Duplex_Master
+PC10.Mode=Full_Duplex_Master
 USB_HOST.BSP.number=1
 ProjectManager.DefaultFWLocation=true
-PC2.Mode=Full_Duplex_Master
 PE14.GPIO_Label=KEYBOARD_COLUMN_3
+PC2.Mode=Full_Duplex_Master
 PD9.Signal=GPIO_Output
 PD5.Signal=GPIO_Input
 PB12.Locked=true
@@ -449,11 +429,9 @@ boardIOC=true
 PA9.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Label=OTG_FS_DP
 RCC.FamilyName=M
-PA0-WKUP.Locked=true
 PE9.GPIOParameters=GPIO_PuPd
 PE15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD8.GPIO_Label=KEYBOARD_ROW_4
-PA10.GPIO_Mode=GPIO_MODE_AF_PP
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD12.Locked=true
 PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -461,7 +439,6 @@ PA13.Signal=SYS_JTMS-SWDIO
 PD4.GPIO_PuPd=GPIO_NOPULL
 PA9.Mode=Activate_VBUS
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-I2S3.RealAudioFreq-Half_Duplex_Master=96.774 KHz
 SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 PE15.GPIO_Label=encoder_button
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
@@ -484,7 +461,6 @@ SH.S_TIM1_CH2.ConfNb=1
 RCC.VCOI2SOutputFreq_Value=192000000
 board=STM32F407G-DISC1
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
-PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 RCC.VCOOutputFreq_Value=336000000
 PC13-ANTI_TAMP.Locked=true
 PB15.Mode=Full_Duplex_Master
@@ -499,7 +475,6 @@ SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PD4.GPIO_Label=Audio_RST [CS43L22_RESET]
 PC1.GPIO_Label=AM2302
-PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
@@ -540,7 +515,7 @@ PD10.PinState=GPIO_PIN_RESET
 RCC.HSI_VALUE=16000000
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 RCC.PLLQ=7
-I2S3.RealAudioFreq=93.75 KHz
+I2S3.RealAudioFreq=8.0 KHz
 RCC.PLLM=8
 RCC.PLLN=336
 PE5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -548,7 +523,6 @@ PB7.Locked=true
 PB8.Signal=GPIO_Output
 PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
 PC9.Signal=I2C3_SDA
-PC7.Mode=Master_Clock_Activated
 PA11.GPIO_Mode=GPIO_MODE_AF_PP
 PD9.Locked=true
 RCC.APB1Freq_Value=42000000
