--- a/STM32F407.ioc
+++ b/STM32F407.ioc
@@ -16,7 +16,6 @@ PA14.GPIO_Label=SWCLK
 RCC.PLLQCLKFreq_Value=48000000
 I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
 PD8.Locked=true
-USB_HOST0.BSP.condition=
 PC6.GPIO_Label=CS_mcroSD
 PC3.Locked=true
 RCC.RTCFreq_Value=32000
@@ -40,7 +39,6 @@ TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,Clo
 PD4.Signal=GPIO_Output
 RCC.APB2TimFreq_Value=168000000
 PB6.Signal=GPIO_Output
-USB_HOST0.BSP.component=
 SPI1.CalculateBaudRate=42.0 MBits/s
 PC3.Signal=I2S2_SD
 PD8.Signal=GPIO_Output
@@ -142,9 +140,7 @@ Mcu.Pin63=VP_TIM3_VS_no_output1
 Mcu.Pin60=VP_SYS_VS_Systick
 Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin64=VP_USB_HOST_VS_USB_HOST_CDC_FS
-USB_HOST0.BSP.semaphore=
 PC3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-USB_HOST0.BSP.STBoard=false
 PD10.Signal=GPIO_Output
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_Label=T_CS
@@ -262,7 +258,6 @@ I2S3.Instance=SPI$Index
 SH.GPXTI1.ConfNb=1
 PB12.GPIO_PuPd=GPIO_PULLUP
 SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-USB_HOST0.BSP.mode=Output
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC0.Locked=true
 PC1.Signal=GPIO_Input
@@ -281,7 +276,7 @@ PD15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Signal=I2S3_CK
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_HOST_Init-USB_HOST-false-HAL-false,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RNG_Init-RNG-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_HOST_Init-USB_HOST-false-HAL-false,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_RNG_Init-RNG-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true,12-MX_I2S3_Init-I2S3-false-HAL-true
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -327,7 +322,6 @@ Mcu.Pin6=PC14-OSC32_IN
 Mcu.Pin7=PC15-OSC32_OUT
 Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
-USB_HOST0.BSP.ip=GPIO
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.GPIO_Label=PH0-OSC_IN
@@ -363,7 +357,6 @@ PB3.GPIOParameters=GPIO_Label
 PE3.Locked=true
 PB7.Signal=GPIO_Output
 PB8.Locked=true
-USB_HOST0.BSP.i2creg=0
 PE4.Signal=GPIO_Output
 PE6.GPIOParameters=GPIO_Speed,GPIO_Label
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
@@ -371,7 +364,6 @@ ProjectManager.ProjectName=STM32F407
 PA13.GPIOParameters=GPIO_Label
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PB7.GPIO_Label=T_CLK
-USB_HOST0.BSP.i2caddr=0
 PD13.GPIO_Label=LD3 [Orange Led]
 PA6.Signal=SPI1_MISO
 PA7.Locked=true
@@ -385,7 +377,6 @@ RCC.LSI_VALUE=32000
 USB_OTG_FS.VirtualMode=Host_Only
 PE0.GPIO_Label=T_MISO
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
-USB_HOST0.BSP.name=Drive_VBUS_FS
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
 SPI2.Direction=SPI_DIRECTION_2LINES
@@ -413,9 +404,7 @@ PC10.GPIO_Label=I2S3_SCK [CS43L22_SCLK]
 ProjectManager.NoMain=false
 SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction,BaudRatePrescaler,CalculateBaudRate
 PC11.Signal=GPIO_Output
-USB_HOST0.BSP.solution=PC0
 PC10.Mode=Full_Duplex_Master
-USB_HOST.BSP.number=1
 ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=KEYBOARD_COLUMN_3
 PC2.Mode=Full_Duplex_Master
@@ -469,7 +458,6 @@ PD11.GPIOParameters=PinState,GPIO_Label
 PA12.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
 RCC.APB2Freq_Value=84000000
-USB_HOST0.BSP.api=Unknown
 MxCube.Version=6.2.1
 SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
@@ -537,7 +525,6 @@ PC3.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_PuPd=GPIO_NOPULL
 PE1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA7.Signal=SPI1_MOSI
-USB_HOST0.BSP.instance=PC0
 PE9.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 isbadioc=false
